# AgentSync

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json
agentsync/: __init__.py  cli.py  config.py  crypto.py  daemon.py  responder.py  tui.py
agentsync/relay/: __init__.py  server.py
docs/: PROTOCOL.md  install.md  security.md
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/commands/: agentsync-ask.md  agentsync-auto.md  agentsync-connect.md  agentsync-peers.md  agentsync-statusline.md
plugin/hooks/: hooks.json  on_session_end.py  on_session_start.py
plugin/mcp/: README.md  server.py
plugin/runtime/: bootstrap.py
plugin/runtime/agentsync/: config.py  crypto.py  daemon.py  protocol.py  statusline.py
scripts/: bundle.sh
tests/: smoke_local.py  smoke_relay.py  smoke_trust.py  stress.py  test_groupmsg.py  test_remote.py
